cleaning up, more docs, fix #1
